Added crypto names table and in-memory set.