@@ -6,6 +6,7 @@ import com.opencsv.CSVReader;
 import com.opencsv.CSVReaderBuilder;
 import com.opencsv.exceptions.CsvException;
 import com.xm.cryptorecservice.model.CryptoPrice;
+
 import org.springframework.stereotype.Service;
 
 import java.io.File;
@@ -19,15 +20,16 @@ public class CryptoPriceFileReader {
 
     public List<CryptoPrice> readCSV(File csv) throws IOException {
         FileReader reader = new FileReader(csv);
-        CSVParser parser = new CSVParserBuilder()
-                .withSeparator(',')
-                .withIgnoreQuotations(true)
-                .build();
-        try (CSVReader csvReader = new CSVReaderBuilder(reader)
-                .withSkipLines(1)
-                .withCSVParser(parser)
-                .build()) {
-            return csvReader.readAll().stream().map(CryptoPrice::fromCSVRow).collect(Collectors.toList()); // memory-intensive operation, consider parallelStream
+        CSVParser parser =
+                new CSVParserBuilder().withSeparator(',').withIgnoreQuotations(true).build();
+        try (CSVReader csvReader =
+                new CSVReaderBuilder(reader).withSkipLines(1).withCSVParser(parser).build()) {
+            return csvReader.readAll().stream()
+                    .map(CryptoPrice::fromCSVRow)
+                    .collect(
+                            Collectors
+                                    .toList()); // memory-intensive operation, consider
+                                                // parallelStream
         } catch (CsvException e) {
             e.printStackTrace();
             throw new RuntimeException(e);
